--- a/res/layout-hdpi/activity_login.xml
+++ b/res/layout-hdpi/activity_login.xml
@@ -14,7 +14,7 @@
 
         <TextView
             android:id="@+id/title"
-            style="@style/black_17"
+            style="@style/white_18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
