--- a/res/layout-hdpi/activity_balance_query.xml
+++ b/res/layout-hdpi/activity_balance_query.xml
@@ -26,6 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="刷银行卡" 
+                android:layout_marginTop="5dip"
                 android:layout_centerVertical="true"/>
 
             <!-- <ImageView
